# llvm-ir-strength-reducer

./: CMakeLists.txt  README.md  README_v1.md  src_v1.cpp
.github/workflows/: ci.yml
include/: StrengthReduce.h
scripts/: benchmark.sh  run_tests.sh
src/: StrengthReduce.cpp
tests/: sample.c  strength_reduction.ll
